--- a/test/html/index3.html
+++ b/test/html/index3.html
@@ -1,5 +1,5 @@
-<input id="text1" type="text" />
-<input id="text2" type="text" />
+<input id="text1"
+       type="text" />
 
 <script type="module">
   import { DataMirror, DataMirrorWindowStrategy, DataMirrorBroadcastStrategy } from './test.js';
@@ -8,24 +8,12 @@
     new DataMirrorWindowStrategy(),
     new DataMirrorBroadcastStrategy()
   );
-  const dataMirror2 = new DataMirror('awd', a => a).withStrategy(
-    new DataMirrorWindowStrategy(),
-    new DataMirrorBroadcastStrategy()
-  );
 
   const input1 = document.getElementById('text1');
-  const input2 = document.getElementById('text2');
   input1.addEventListener('input', function (value) {
     dataMirror1.update(value.target.value);
   });
   dataMirror1.listenForChanges(value => {
     input1.value = value;
-  });
-
-  input2.addEventListener('input', function (value) {
-    dataMirror2.update(value.target.value);
-  });
-  dataMirror2.listenForChanges(value => {
-    input2.value = value;
   });
 </script>
